temp/objects/CP_TradeInitiative__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveStartDate__c</fullName>
        <label>EffectiveStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trade_Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <label>Sponsor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trade Initiatives</relationshipLabel>
        <relationshipName>Trade_Initiatives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trade_Channel_Target__c</fullName>
        <label>Trade Channel Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Drug</fullName>
                </value>
                <value>
                    <fullName>C-Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Trade Initiative</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>EffectiveEndDate__c</columns>
        <columns>EffectiveStartDate__c</columns>
        <columns>Manager__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Trade_Channel_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Trade Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Initiatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>